Enabled to download and update the running web application