@@ -1,31 +1,3 @@
-/**
- * ***************************************************************
- * Agent.GUI is a framework to develop Multi-agent based simulation 
- * applications based on the JADE - Framework in compliance with the 
- * FIPA specifications. 
- * Copyright (C) 2010 Christian Derksen and DAWIS
- * http://www.dawis.wiwi.uni-due.de
- * http://sourceforge.net/projects/agentgui/
- * http://www.agentgui.org 
- *
- * GNU Lesser General Public License
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation,
- * version 2.1 of the License.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the
- * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
- * Boston, MA  02111-1307, USA.
- * **************************************************************
- */
 package de.enflexit.common.transfer;
 
 import java.io.File;
@@ -33,7 +5,6 @@ import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.ConnectException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
@@ -41,9 +12,7 @@ import java.net.NoRouteToHostException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.net.URLDecoder;
 import java.net.UnknownHostException;
-import java.nio.charset.StandardCharsets;
 
 import de.enflexit.common.http.WebResourcesAuthorization;
 import de.enflexit.common.http.WebResourcesAuthorization.AuthorizationType;
@@ -95,13 +64,14 @@ public class Download {
 	private void checkAndCorrectSourceURL() {
 		
 		try {
-			URL url = new URL(URLDecoder.decode(this.srcFileURL, StandardCharsets.UTF_8.toString()));
+			//URL url = new URL(URLDecoder.decode(this.srcFileURL, StandardCharsets.UTF_8.toString()));
+			URL url = URI.create(srcFileURL).toURL();
 	        URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url.getRef());
 	        String urlStringCleaned = uri.toString();
 	        if (urlStringCleaned!=null && urlStringCleaned.equals(this.srcFileURL)==false) {
 	        	this.srcFileURL = urlStringCleaned;
 	        }
-		} catch (MalformedURLException | URISyntaxException | UnsupportedEncodingException urlEx) {
+		} catch (MalformedURLException | URISyntaxException urlEx) {
 			//urlEx.printStackTrace();
 		}
 	}
@@ -145,7 +115,7 @@ public class Download {
 		InputStream is = null;
 		try {
 			// --- Connect to the SourceObject -----------
-			url = new URL(srcFileURL);
+			url = URI.create(srcFileURL).toURL();
 			host = url.getHost();
 			huc = (HttpURLConnection) url.openConnection();
 			WebResourcesAuthorization auth = this.getWebResAuth();
